src/objects/QPMS__MetaDataMapping__mdt.object
<CustomObject>
    <description>Qualityze Rest service</description>
    <fields>
        <fullName>QPMS__DataType__c</fullName>
        <label>DataType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Default_Value__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Field_Set__c</fullName>
        <inlineHelpText>Field set name</inlineHelpText>
        <label>Field Set</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facility Details</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Module_API_Name__c</fullName>
        <label>Module API Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QPMS__Complaint__c</fullName>
                    <default>true</default>
                    <label>QPMS__Complaint__c</label>
                </value>
                <value>
                    <fullName>QPMS__Audit__c</fullName>
                </value>
                <value>
                    <fullName>QPMS__Product__c</fullName>
                </value>
                <value>
                    <fullName>QPMS__Defect__c</fullName>
                </value>
                <value>
                    <fullName>QPMS__Process__c</fullName>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Other_Mapping__c</fullName>
        <inlineHelpText>map the field names of account with the fields of facility details field set of complaints</inlineHelpText>
        <label>Other Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__RecordType__c</fullName>
        <label>RecordType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Review DHR</fullName>
                </value>
                <value>
                    <fullName>Product Evaluation</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
                <value>
                    <fullName>AdhocTask</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Request</fullName>
                </value>
                <value>
                    <fullName>Response</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MetaDataMapping</label>
    <pluralLabel>MetaDataMappings</pluralLabel>
</CustomObject>